--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+/* .App{
+    display : flex;
+    height: fit-content;
+} */
+
+.bodyContainer {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    gap: 30px;
+    /* height: 100vh; */
+    overflow: hidden;
+    position: relative;
+}
+  
+  
+.appContainer {
+    background: darkslateblue;
+    overflow: hidden;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: max-content 1fr;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loginContainer {
+    height: 100vh;
+    background-image: linear-gradient(#8360c3, #2ebf91);
 }
