--- a/src/containers/Classes/classes.css
+++ b/src/containers/Classes/classes.css
@@ -5,6 +5,9 @@
     margin-top: 60px;
     grid-template-columns: 1fr max-content;
     gap: 50px;
+    position: absolute;
+    left: 105px;
+    width: -webkit-fill-available;
 }
 
 .initlaClassHeader {
@@ -98,4 +101,41 @@
 
 .initlaClassContainer img {
     height: 100px;
+}
+
+.classInfoContentWrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.classLink {
+    display: grid;
+    gap: 12px;
+    justify-items: center;
+    background: rgba(0, 0, 139, 0.4);
+    padding: 20px 12px;
+    grid-template-rows: max-content max-content;
+}
+
+.classLink a {
+    text-align: center;
+    display: grid;
+    text-decoration: none;
+    color: #fff;
+    width: max-content;
+    justify-items: center;
+    padding: 9px;
+    height: max-content;
+    background: cornflowerblue;
+    border-radius: 4px;
+}
+
+.meetingInfo {
+    display: grid;
+    gap: 8px;
+}
+
+.meetingId span,
+.passcode span{
+    color: gold;
 }
