--- a/src/containers/Login/login.css
+++ b/src/containers/Login/login.css
@@ -1,19 +1,29 @@
-.login,
-.signup {
-    margin-top: 30px;
+
+
+ .login {
+    display: flex;
+    height: 450px;
+    width: max-content;
  }
  
  .loginContent,
  .signupContent {
-     width: 300px;
      box-shadow: 0 0 10px 0 #ccc;
      display: grid;
      align-items: center;
-     gap: 16px;
-     margin: auto;
-     padding: 32px 24px;
-     margin-top: 20px;
+     /* margin: auto; */
+     padding: 24px;
+     /* margin-top: 20px; */
      background: #fff;
+     width: 320px;
+ }
+
+ .signup {
+    display: flex;
+ }
+ .signupContent {
+    /* width: 300px; */
+    gap: 16px;
  }
  
  .login .iconWrapper,
@@ -22,8 +32,10 @@
      color: #000;
      justify-content: center;
  }
- .login .iconWrapper {
+ .login .iconWrapper,
+ .signup .iconWrapper {
     display: grid;
+    justify-items: center;
  }
  .iconWrapper img{
      height: 50px;
@@ -74,3 +86,39 @@
  .invalidErrorMessage {
     color: firebrick;
  }
+
+ .login img {
+    width: 420px;
+ }
+
+ .iconWrapper img{
+    width: 200px;
+    margin-bottom: 24px;
+ }
+
+ .iconWrapper h2,
+ .iconWrapper h3 {
+    margin: 0;
+ }
+
+ .signUpRightWrapper {
+    display: grid;
+    background-color: darkslateblue;
+    color: #fff;
+    padding: 20px 40px;
+    width: 300px;
+ }
+
+ .signUpRightWrapper h2 {
+    margin: 0;
+    margin-bottom: 8px;
+    font-size: 30px;
+ }
+
+.portalDescription {
+    font-size: 24px;
+    color: lightseagreen;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+}
