Added Forgot Password and reset password pages

--- a/src/containers/Login/login.css
+++ b/src/containers/Login/login.css
@@ -56,14 +56,16 @@
  }
  
  .noAccount,
- .accountExists {
+ .accountExists,
+ .forgotPasswordLink {
      font-size: 14px;
      justify-content: center;
      display: flex;
  }
  
  .noAccount span,
- .accountExists span {
+ .accountExists span,
+ .forgotPasswordLink span {
      color: dodgerblue;
      cursor: pointer;
  }
